<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/IPDetails"
        android:id="@+id/IPDetails_TextView_ID" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/IP"
            android:id="@+id/IP_TextViewID"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/IP_SetTextVIew_ID"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/SN"
            android:id="@+id/SN_TextView_ID"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/SN_SetTextView_ID"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/GW"
            android:id="@+id/GW_TextView_ID"
            android:layout_weight="1"
                                    />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/GW_SetTextView_ID"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/WAN"
            android:id="@+id/WAN_TextView_ID"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/WAN_SetTextView_ID"
            android:layout_weight="1"
            android:focusable="true"
            android:onClick="RefreshWANip"
            android:clickable="true" />

    </LinearLayout>

    <!-- NAT -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/NAT"
            android:id="@+id/NAT_TextView_ID"
            android:layout_weight="1"
/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/NAT_SetTextView_ID"
            android:layout_weight="1"
/>
    </LinearLayout>
    <!-- DNS1 -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DNS1"
            android:id="@+id/DNS_TextView_ID"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/DNS1_SetTextView_ID"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DNS2"
            android:id="@+id/DNS2_TextView_ID"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/DNS2_SetTextView_ID"
            android:layout_weight="1"
/>

    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/DHCPDetails"
        android:id="@+id/DHCPDetails_TextView_ID"
/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearLayout">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5"
            android:id="@+id/space2" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DHCPServer"
            android:id="@+id/DHCPServer_TextVIEW_ID"
            android:layout_weight="1"
/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/DHCPServer_SetTextView_ID"
            android:layout_weight="1"
/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5"
            android:id="@+id/space" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/Lease"
            android:id="@+id/Lease_TextView_ID"
            android:layout_weight="1"
/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/Lease_SetTextView_ID"
            android:layout_weight="1"
/>
    </LinearLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/WirelessDetails"
        android:id="@+id/textView"
/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/SSID"
            android:id="@+id/SSID_TextView_ID"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/SSID_SetTextView_ID"
            android:layout_weight="1" />
    </LinearLayout>

<!-- RSSI -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/RSSI"
            android:id="@+id/RSSI_TextView_ID"
            android:layout_weight="1"
/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/RSSI_SetTextView_ID"
            android:layout_weight="1"
/>
    </LinearLayout>
 <!--BSSID -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/BSSID"
            android:id="@+id/BSSID_TextView_ID"
            android:layout_weight="1"
/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/BSSID_SetTextView_ID"
            android:layout_weight="1"
/>
    </LinearLayout>
  <!-- Local Mac -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/LOCALMAC"
            android:id="@+id/LocalMac_TextView_ID"
            android:layout_weight="1"
/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/LocalMac_SetTextView_ID"
            android:layout_weight="1"
/>
    </LinearLayout>

 <!--Link Speed -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Space
            android:layout_width="fill_parent"
            android:layout_height="20dp"
            android:layout_weight="1.5" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/LINKSPEED"
            android:id="@+id/LINKSPEED_TextView_ID"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/LINKSPEED_SetTextView_ID"
            android:layout_weight="1"
/>
    </LinearLayout>


    <ProgressBar
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BitRateBar_ID"
        android:max="150"
        android:progress="0"
        android:indeterminate="false" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/_0Mbps"
            android:id="@+id/ID_0Mbps"
            android:textSize="10dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/_75Mbps"
            android:id="@+id/ID_75Mbps"
            android:textSize="10dp"
            android:layout_weight="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/_150Mbps"
            android:id="@+id/ID_150Mbps"
            android:textSize="10dp" />
    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:id="@+id/ConsoleOutput_ID"
        android:textColor="#ff00c701"
        android:typeface="monospace"
        android:textSize="12sp"/>


</LinearLayout>